...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/signInForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/signUpForm"
                android:layout_alignTop="@+id/signUpForm"
                android:background="?attr/backgroundColor"
                android:padding="@dimen/spacing_default">
...
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signInFormTitle"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:hint="Email">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/signInEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
...
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signInInputEmail"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:hint="Password">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/signInPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:singleLine="true" />

...
                    android:padding="@dimen/spacing_small"
                    android:text="Forget Password?"
                    android:textColor="@color/text_primary"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/signInButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/spacing_default"
                    android:text="Login"
                    android:theme="@style/MyOverlayTheme" />

                <Button
                    android:id="@+id/skipButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
...
