<resources>
    <string name="app_name">Outlay</string>
    <string name="menu_item_categories">Categories</string>
    <string name="menu_item_feedback">Feedback</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_signout">Sign Out</string>
    <string name="menu_item_signin">Sign In</string>
    <string name="menu_item_create_user">Create User</string>
    <string name="menu_item_analysis">Analysis</string>
...
