...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/chartIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="@dimen/spacing_default" />

        <ImageView
            android:id="@+id/drawerIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
...
