<?xml version="1.0" encoding="utf-8"?>
<app.outlay.view.numpad.NumpadView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/numpadView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/spacing_small"
    android:layout_marginRight="@dimen/spacing_small" />
