...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <app.outlay.view.numpad.NumpadButton
            android:id="@+id/btn4"
            style="?attr/numpadButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:numpadButtonText="4" />

...
